feat: Add configuration for operator publishing (#12)
- Added kustomize configs for operator publishing
- Updated Helm chart deploy-templates

Change-Id: I27c99b79bafafa378b3f706b546ce2eae5e48a78